--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "css-split-webpack-plugin": "^0.2.5",
     "detail": "^1.0.10",
     "echarts-for-react": "^1.1.2",
-    "ejs": "2.5.1",
+    "ejs": ">=2.5.5",
     "es3ify-loader": "^0.2.0",
     "events": "1.1.1",
     "express": "4.14.0",
@@ -65,12 +65,12 @@
     "key-mirror": "^1.0.1",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
-    "lodash": "^4.13.1",
+    "lodash": "^4.17.11",
     "lodash.debounce": "^4.0.8",
     "log4js": "0.6.38",
     "md5": "^2.1.0",
     "moment": "^2.22.2",
-    "node.extend": "1.1.6",
+    "node.extend": "1.1.7",
     "npm-run-all": "^4.1.2",
     "nprogress": "^0.2.0",
     "object-assign": "^4.0.1",
@@ -93,7 +93,7 @@
     "rimraf": "^2.6.2",
     "superagent": "^2.1.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack-dev-server": "1.16.1"
+    "webpack-dev-server": "3.1.11"
   },
   "devDependencies": {
     "babel": "^6.23.0",
