--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-falsework",
-  "version": "0.0.2",
-  "description": "a react scaffold. react/router/webpack/redux/es6/test/ajax",
+  "version": "1.0.0",
+  "description": "A simple version for the PC side react + ant design scaffolding",
   "main": "index.js",
   "author": "IMei",
   "private": false,
@@ -91,7 +91,7 @@
     "reqwest": "^2.0.5",
     "reselect": "^3.0.1",
     "rimraf": "^2.6.2",
-    "superagent": "^2.1.0",
+    "superagent": "^3.7.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack-dev-server": "3.1.11"
   },
