--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "{{name}}",
   "version": "1.0.0",
-  "description": "A simple version for the PC side react + ant design scaffolding",
+  "description": "{{description}",
   "main": "index.js",
   "author": "{{author}}",
   "private": false,
